Update Quantitative Momentum Strategy for Picking Top FTSE Stocks.ipynb
Update to lseg domain

--- a/Quantitative Momentum Strategy for Picking Top FTSE Stocks.ipynb
+++ b/Quantitative Momentum Strategy for Picking Top FTSE Stocks.ipynb
@@ -155,7 +155,7 @@
     "    username: DSS API login id\n",
     "    password: DSS API login password\n",
     "    '''\n",
-    "    _AuthenURL = \"https://selectapi.datascope.refinitiv.com/RestApi/v1/Authentication/RequestToken\"\n",
+    "    _AuthenURL = \"https://selectapi.datascope.lseg.com/RestApi/v1/Authentication/RequestToken\"\n",
     "    _header= {}\n",
     "    _header['Prefer']='respond-async'\n",
     "    _header['Content-Type']='application/json; odata.metadata=minimal'\n",
@@ -242,7 +242,7 @@
     "    token: Authentication token generated from the above step\n",
     "    json_payload: Sample json object which application parses to get the RIC list by accessing the value of Constituents.\n",
     "    '''\n",
-    "    _expandChainURL = \"https://selectapi.datascope.refinitiv.com/RestApi/v1/Search/HistoricalChainResolution\"\n",
+    "    _expandChainURL = \"https://selectapi.datascope.lseg.com/RestApi/v1/Search/HistoricalChainResolution\"\n",
     "    _header = {}\n",
     "    _header['Prefer'] = 'respond-async'\n",
     "    _header['Content-Type'] = 'application/json; odata.metadata=minimal'\n",
@@ -507,7 +507,7 @@
    "source": [
     "def ExtractRaw(token,json_payload):\n",
     "    try:\n",
-    "        _extractRawURL=\"https://selectapi.datascope.refinitiv.com/RestApi/v1/Extractions/ExtractRaw\"\n",
+    "        _extractRawURL=\"https://selectapi.datascope.lseg.com/RestApi/v1/Extractions/ExtractRaw\"\n",
     "        # Setup Request Header\n",
     "        _header={}\n",
     "        _header['Prefer']='respond-async'\n",
@@ -557,7 +557,7 @@
     "            print(\"======================================\\n\")\n",
     "\n",
     "        # Request should be completed then Get the result by passing jobID to RAWExtractionResults URL\n",
-    "        _getResultURL = str(\"https://selectapi.datascope.refinitiv.com/RestApi/v1/Extractions/RawExtractionResults(\\'\" + _jobID + \"\\')/$value\")\n",
+    "        _getResultURL = str(\"https://selectapi.datascope.lseg.com/RestApi/v1/Extractions/RawExtractionResults(\\'\" + _jobID + \"\\')/$value\")\n",
     "        print(\"Retrieve result from \" + _getResultURL)\n",
     "        resp=get(_getResultURL,headers=_header,stream=True)\n",
     "\n",
@@ -650,7 +650,7 @@
      "output_type": "stream",
      "text": [
       "Status Code=202\n",
-      "Get Status from https://selectapi.datascope.refinitiv.com/RestApi/v1/Extractions/ExtractRawResult(ExtractionId='0x07dd8e08527d7c8f')\n",
+      "Get Status from https://selectapi.datascope.lseg.com/RestApi/v1/Extractions/ExtractRawResult(ExtractionId='0x07dd8e08527d7c8f')\n",
       "Status:InProgress\n",
       "Status:InProgress\n",
       "Status:InProgress\n",
@@ -797,7 +797,7 @@
       "\n",
       "======================================\n",
       "\n",
-      "Retrieve result from https://selectapi.datascope.refinitiv.com/RestApi/v1/Extractions/RawExtractionResults('0x07dd8e08527d7c8f')/$value\n"
+      "Retrieve result from https://selectapi.datascope.lseg.com/RestApi/v1/Extractions/RawExtractionResults('0x07dd8e08527d7c8f')/$value\n"
      ]
     }
    ],
